--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -165,7 +165,7 @@
         </ng-container>
   
         <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: columns"></mat-row>
+        <mat-row *matRowDef="let row; columns: columns"  (click)="openDrugDetailsDialog(row.Unit_Name)"></mat-row>
       </mat-table>
   
       <!-- Paginator -->
