--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -138,8 +138,13 @@
       </form>
   
       <!-- Data Table -->
-      <mat-table *ngIf="!showGraph" [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
-        <ng-container matColumnDef="Unit_Name">
+      <mat-table
+      *ngIf="!showGraph"
+      [dataSource]="matTableDataSource"
+      [matSort]
+      dir="rtl"
+      class="mat-elevation-z8"
+    >        <ng-container matColumnDef="Unit_Name">
           <mat-header-cell *matHeaderCellDef mat-sort-header> יחידה </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{ element.Unit_Name }} </mat-cell>
         </ng-container>
