--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.scss
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.scss
@@ -612,3 +612,21 @@ ngx-gauge {
   font-weight: bold;
   color: rgba(0, 0, 0, 0.9); /* Slightly darker color for values */
 }
+/* drug2h-review.component.scss */
+/* drug2h-review.component.scss */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it's above other elements */
+}
+.loading-text{
+  font-size: x-large;
+  font-weight: bolder;
+}
