--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -89,7 +89,7 @@
       <!-- Gauge Card -->
       <mat-card class="dashboard-card">
         <div class="card-title">
-            <h3>אחוז ביצוע</h3>
+            <h3>בקרות תקינות </h3>
           </div> 
         <ngx-gauge
           [size]="200"
