--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -179,7 +179,7 @@
       <mat-table
       *ngIf="!isGraphVisible"
       [dataSource]="matTableDataSource"
-      [matSort]
+      matSort
       dir="rtl"
       class="mat-elevation-z8"
     >        <ng-container matColumnDef="Unit_Name">
