--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -213,7 +213,7 @@
   
       <!-- Paginator -->
       <mat-paginator
-      [length]="matTableDataSource.data.length || 0"
+      [length]="matTableDataSource.data.length "
       [pageSize]="10"
       [pageSizeOptions]="[10, 25, 50]"
       showFirstLastButtons
