--- a/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
+++ b/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
@@ -1,16 +1,24 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <div class="body">
   
+  <mat-card class="summary-card" dir="rtl">
+    <div class="summary-row">
+      <div class="summary-item red">🔴 מעל 60 דק: {{ summary.red }}</div>
+      <div class="summary-item orange">🟠 עד 30 דק: {{ summary.orange }}</div>
+      <div class="summary-item green">🟢 בין 30–60 דק: {{ summary.green }}</div>
+      <div class="summary-item total">סה"כ מקרים: {{ summary.total }}</div>
+    </div>
+  </mat-card>
   
 
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-    <div class="container-fluid mb-2">
+    <!-- <div class="container-fluid mb-2">
       <div class="row search-count">
         <div class="col">
           <div dir="rtl" class="card">
             <div dir="rtl" class="card-body">
               <ng-container *ngFor="let column of columns; let i = index">
-                <!-- Check if the index is a multiple of 4 to start a new row -->
+                
                 <div class="filter-row" *ngIf="i % 4 === 0"></div>
 
                 <mat-form-field class="filter-field" *ngIf="column == 'departName'">
@@ -29,13 +37,13 @@
                   <div *ngIf="column !== 'insert_time' && column !== 'update_time'">
                     <input matInput [formControl]="getFormControl(column)" class="filter-input" />
 
-                    <!-- <div class="name-select-wrapper">
+                    <div class="name-select-wrapper">
                       <mat-select *ngIf="column === 'ssP_DESCRIPTION'" [formControl]="getFormControl(column)" class="name-select">
                         <mat-option *ngFor="let option of answerTextOptions" [value]="option">
                           {{ option }}
                         </mat-option>
                       </mat-select>
-                    </div> -->
+                    </div> 
                   </div>
 
                   <div *ngIf="column == 'insert_time' || column == 'update_time'" #datepicker class="datepicker-field">
@@ -54,7 +62,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div dir="rtl" style="display: flex; justify-content: space-between; align-items: center">
       <mat-form-field class="long-search-bar" style="flex: 1; padding-right: 10px">
         <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
@@ -102,6 +110,6 @@
     [length]="matTableDataSource.paginator?.length || 0"
     [pageIndex]="matTableDataSource.paginator?.pageIndex"
     [pageSize]="matTableDataSource.paginator?.pageSize"
-    [pageSizeOptions]="[15, 50, 100]"
+    [pageSizeOptions]="[10, 50, 100]"
   ></mat-paginator>
 </div>
