--- a/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.scss
+++ b/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.scss
@@ -364,4 +364,8 @@
     color: #c62828; // dark red text
     font-weight: bold;
   }
+  .custom-grey {
+    background-color: grey;
+    color: white;
+  }
   
